# partymix

./: Cargo.toml  README.md
.github/workflows/: cargo-fmt.yml  cargo-readme.yml  cargo-test.yml  commit-msg.yml
src/: main.rs  mbr.rs
src/cli/: error.rs  kind.rs  mod.rs  partition.rs
